k8s/breakdown/react-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: 69966/earthdx:78
          imagePullPolicy: Always
          ports:
            - containerPort: 80
