k8s/breakdown/react-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: react-app
  namespace: frontend
spec:
  selector:
    app: react-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
