k8s/breakdown/react-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app
  namespace: frontend
spec:
  ingressClassName: traefik

  rules:
    - host: react.first-frost.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app
                port:
                  number: 80
