k8s/breakdown/react-ingressroute.yml
# earthdx-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: earthdx-ingressroute
  namespace: earthdx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`react.first-frost.site`)
      kind: Rule
      services:
        - name: earthdx-svc
          port: 80
  tls:
    secretName: earthdx-tls
